@@ -42,6 +42,7 @@ Developers
 #include "fixedValueFvPatchField.H"
 #include "sourceEventFile.H"
 #include "outputEventFile.H"
+#include "patchEventFile.H"
 
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 using namespace Foam;
@@ -67,7 +68,7 @@ int main(int argc, char *argv[])
     {
         if (outputEventIsPresent) outputEvent.update(runTime.timeOutputValue());
         if (sourceEventIsPresent) sourceEvent.update(runTime.timeOutputValue());
-
+        if (patchEventIsPresent) patchEvent.update(runTime.timeOutputValue());
         #include "setDeltaT.H"
 
         runTime++;
